Fixed the spacing around .tablepane headers

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -3042,6 +3042,11 @@ h2 + .actions {
 .tablepane {
   --pane-y-padding-default: calc(var(--xl) - 2px);
   --pane-x-padding-default: calc(var(--padding) - 2px);
+
+  #content & {
+    --pane-padding: var(--pane-x-padding-default);
+  }
+
   margin-block: calc(var(--pane-padding, var(--pane-y-padding-default)) * -1)
     calc(
       var(--pane-padding, var(--padding)) * -1 + var(--pane-padding, var(--m))
